--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "app/about/page.tsx"
+    "app/contact/page.tsx"
   ],
   "exclude": ["node_modules"]
 }
